Fix navigation breadcrumbs on small screen
- Use display: `inline-block` instead of `display-inline` to correct padding after wrap

--- a/blanc/res/style.css.sass
+++ b/blanc/res/style.css.sass
@@ -152,7 +152,7 @@ footer
 nav
     padding: 0 10px
     font-size: 0.75em
-    display: inline
+    display: inline-block
     color: #444
 
     // .nav-item
